# satya-ai

./: .replit  ai_agent_generator.py  ai_service_simple.py  app.py  package-lock.json  package.json  pyproject.toml  run.py  run_ai_service.py  start_ai_service.py
attached_assets/: Pasted--Feature-Legitimacy-Threat-Analyzer-Input-URL-phone-number-email-app-link-headline-n-1750256901637_1750256901638.txt  Pasted--Here-s-how-HyperSatya-X-can-secure-small-startups-real-features-1-Startup-Security-Audit--1750096027898_1750096027899.txt  Pasted--SaaS-Overview-Product-Name-SatyaSec-Powered-by-SatyaAI-Operating-Privately-Tagline-Your-Se-1750172256254_1750172256254.txt  Pasted--SatyaSec-Founder-Special-Access-Prompt-This-is-your-root-level-admin-prompt-for-controlling-the-1750168337481_1750168337486.txt  Pasted--What-SuRaksha-Is-Asking-You-to-Build-Integrated-Core-Objectives-Behavior-based-continuous-aut-1750097722409_1750097722409.txt  Pasted--You-are-now-acting-as-an-elite-AI-architect-and-cybersecurity-engineer-Your-task-is-to-help-build--1750172239596_1750172239596.txt  Pasted-Audit-1750096027898-1750096027899-txt-Here-s-how-HyperSatya-X-can-secure-small-startups-real--1750096740707_1750096740707.txt  Pasted-import-gradio-as-gr-import-numpy-as-np-import-time-import-uuid-import-os-from-datetime-import-dateti-1750148715383_1750148715384.txt  index_1749958034549.html  package-lock_1749958034550.json  package_1749958034549.json  tailwind.config_1749958034551.js
server/: advancedAnalysisService.ts  advancedThreatIntelligenceService.ts  aiAgentService.ts  aiService.ts  index.ts  (+19 more)
(+122 files in other folders)
